fix: cut off etd time

--- a/src/components/displays/NewGTR/css/trainService.less
+++ b/src/components/displays/NewGTR/css/trainService.less
@@ -2,7 +2,7 @@
   --gap: 36px;
   --ordinal-width: 3ch;
   --std-width: 4.5ch;
-  --etd-width: 9ch;
+  --etd-width: 9.5ch;
 }
 
 .trainService {
